fix: beacuase overflow: hidden i ould not sccroll down to se more notes

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   font-family: 'Poppins', sans-serif;
   display: flex;
   flex-wrap: wrap;
-  overflow: hidden;
   margin: 0;
   padding-top: 3rem;
 }
